adição de cor personalizada por categoria

--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,7 @@
   --bg-black: #141414;
   --bg-cinza: #595959;
   --bg-branco: #FFFFFF;
+  --bottom-cyan: #155e75;
+  --bottom-teal: #115e59;
+  --bottom-indigo: #3730a3;
 }
